--- a/CameraControllerApp/CameraControllerApp.csproj
+++ b/CameraControllerApp/CameraControllerApp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="HttpRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseResult.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
