--- a/CameraControllerApp/CameraControllerApp.csproj
+++ b/CameraControllerApp/CameraControllerApp.csproj
@@ -92,6 +92,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HttpRequest.cs" />
+    <Compile Include="INIhelp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseResult.cs" />
