--- a/CameraControllerApp/packages.config
+++ b/CameraControllerApp/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="RestSharp" version="107.2.1" targetFramework="net461" />
+  <package id="RestSharp" version="107.1.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.IO.Ports" version="5.0.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
