--- a/CameraControllerApp/CameraControllerApp.csproj
+++ b/CameraControllerApp/CameraControllerApp.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraManager.cs" />
+    <Compile Include="Common\OpenBrowserHelper.cs" />
     <Compile Include="Common\FileHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -132,7 +133,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="NLog.config" />
+    <None Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
